--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 # Core dependencies
 pandas>=1.5.0
-psycopg2>=2.9.5
+psycopg2-binary>=2.9.10
 python-telegram-bot>=20.2,<23.0
 Pillow>=9.4.0
 matplotlib>=3.7.0
 minio>=7.1.0
 clarifai-grpc>=9.0.0
+google-genai>=1.15.0
 
 # Version constraints might need adjustment based on compatibility requirements
