Fixed main menu

--- a/requirements.txt
+++ b/requirements.txt
@@ -54,7 +54,7 @@ platformdirs==4.3.8
 prompt_toolkit==3.0.51
 protobuf==6.30.2
 psutil==7.0.0
-psycopg2==2.9.10
+psycopg2-binary==2.9.10
 pure_eval==0.2.3
 pycparser==2.22
 pycryptodome==3.22.0
@@ -64,7 +64,6 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 python-telegram-bot==22.0
 pytz==2025.2
-pywin32==310
 PyYAML==6.0.2
 pyzmq==26.4.0
 regex==2024.11.6
