--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 anyio==4.9.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
+bcrypt==4.0.1
 asttokens==3.0.0
 certifi==2025.4.26
 cffi==1.17.1
@@ -23,7 +24,7 @@ googleapis-common-protos==1.70.0
 grpcio==1.71.0
 h11==0.16.0
 httpcore==1.0.9
-httpx==0.28.1
+httpx==0.27
 huggingface-hub==0.31.4
 idna==3.10
 ipykernel==6.29.5
@@ -77,6 +78,7 @@ sniffio==1.3.1
 soundfile==0.13.1
 stack-data==0.6.3
 statsmodels==0.14.4
+supabase==2.10.0
 sympy==1.14.0
 threadpoolctl==3.6.0
 tokenizers==0.21.1
@@ -91,3 +93,4 @@ tzdata==2025.2
 urllib3==2.4.0
 wcwidth==0.2.13
 widgetsnbextension==4.0.14
+replicate==1.0.7
