Cleaned up requirements
- Deleted unnecessary libraries

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,96 +1,28 @@
-anyio==4.9.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
+aiohttp==3.12.13
 bcrypt==4.0.1
-asttokens==3.0.0
-certifi==2025.4.26
-cffi==1.17.1
 charset-normalizer==3.4.2
 clarifai-grpc==11.3.4
-colorama==0.4.6
-comm==0.2.2
-contourpy==1.3.2
-cycler==0.12.1
-debugpy==1.8.14
 decorator==5.2.1
-executing==2.2.0
-feature-engine==1.8.3
 ffmpeg-python==0.2.0
-filelock==3.18.0
-fonttools==4.57.0
-fsspec==2025.3.2
-future==1.0.0
 googleapis-common-protos==1.70.0
-grpcio==1.71.0
-h11==0.16.0
 httpcore==1.0.9
 httpx==0.27
 huggingface-hub==0.31.4
-idna==3.10
-ipykernel==6.29.5
-ipython==9.2.0
-ipython_pygments_lexers==1.1.1
-ipywidgets==8.1.7
-jedi==0.19.2
-Jinja2==3.1.6
-joblib==1.5.0
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyterlab_widgets==3.0.15
-kiwisolver==1.4.8
 MarkupSafe==3.0.2
 matplotlib==3.10.1
 matplotlib-inline==0.1.7
 minio==7.2.15
-mpmath==1.3.0
 nest-asyncio==1.6.0
-networkx==3.4.2
 numpy==2.2.5
-packaging==25.0
 pandas==2.2.3
-parso==0.8.4
-patsy==1.0.1
-pillow==11.2.1
 platformdirs==4.3.8
-prompt_toolkit==3.0.51
-protobuf==6.30.2
-psutil==7.0.0
 psycopg2-binary==2.9.10
-pure_eval==0.2.3
-pycparser==2.22
-pycryptodome==3.22.0
-Pygments==2.19.1
-pyparsing==3.2.3
-python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 python-telegram-bot==22.0
-pytz==2025.2
-PyYAML==6.0.2
-pyzmq==26.4.0
-regex==2024.11.6
-requests==2.32.3
-safetensors==0.5.3
 scikit-learn==1.6.1
 scipy==1.15.2
 seaborn==0.13.2
-six==1.17.0
-sniffio==1.3.1
 soundfile==0.13.1
-stack-data==0.6.3
-statsmodels==0.14.4
 supabase==2.10.0
-sympy==1.14.0
-threadpoolctl==3.6.0
-tokenizers==0.21.1
-torch==2.7.0
-torchaudio==2.7.0
-tornado==6.4.2
-tqdm==4.67.1
-traitlets==5.14.3
 transformers @ git+https://github.com/huggingface/transformers.git@7a611f0afd5f77ba4802d46c97433ea16ea3ec8a
-typing_extensions==4.13.2
-tzdata==2025.2
-urllib3==2.4.0
-wcwidth==0.2.13
-widgetsnbextension==4.0.14
 replicate==1.0.7
