Removed old bot
Also included plantseg in gitignore - reason being is the dataset is 2 GB+. Ensure it's working locally then we'll push!

Think we need to downgrade PyTorch (which will require downgrading Python) to run plantseg - will need to fix dependency errors :(

--- a/requirements.txt
+++ b/requirements.txt
@@ -26,3 +26,4 @@ soundfile==0.13.1
 supabase==2.10.0
 transformers @ git+https://github.com/huggingface/transformers.git@7a611f0afd5f77ba4802d46c97433ea16ea3ec8a
 replicate==1.0.7
+torch==2.0.0
