--- a/Nutribot/.env.example
+++ b/Nutribot/.env.example
@@ -7,8 +7,8 @@ SUPABASE_ANON_KEY=your_supabase_anon_key
 
 # AI/ML Services
 CLARIFAI_PAT=your_clarifai_personal_access_token
-LLAMA_MODEL=meta-llama/Meta-Llama-3-8B-Instruct
-HUGGINGFACE_API_TOKEN=your_huggingface_token
+OPENAI_API_KEY=key_here
+OPENAI_MODEL=gpt-4.1-mini-2025-04-14
 REPLICATE_API_TOKEN=your_replicate_token
 
 # File Paths (optional)
