--- a/requirements.txt
+++ b/requirements.txt
@@ -7,13 +7,13 @@ ffmpeg-python==0.2.0
 googleapis-common-protos==1.70.0
 httpcore==1.0.9
 httpx==0.27
-huggingface-hub==0.31.4
+openai==1.52.2
 MarkupSafe==3.0.2
 matplotlib==3.10.1
 matplotlib-inline==0.1.7
 minio==7.2.15
 nest-asyncio==1.6.0
-numpy==2.2.5
+numpy==1.26.4
 pandas==2.2.3
 platformdirs==4.3.8
 psycopg2-binary==2.9.10
@@ -24,6 +24,5 @@ scipy==1.15.2
 seaborn==0.13.2
 soundfile==0.13.1
 supabase==2.10.0
-transformers @ git+https://github.com/huggingface/transformers.git@7a611f0afd5f77ba4802d46c97433ea16ea3ec8a
 replicate==1.0.7
-torch==2.0.0
+torch==2.2.0
