--- a/Dashboards/package.json
+++ b/Dashboards/package.json
@@ -13,11 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.0.0",
     "@supabase/supabase-js": "^2.52.0",
     "chart.js": "^4.5.0",
     "daisyui": "^4.6.0",
     "vue": "^3.5.17",
-    "vue-chartjs": "^5.3.2"
+    "vue-chartjs": "^5.3.2",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@types/node": "^24.0.15",
