--- a/Dashboards/package.json
+++ b/Dashboards/package.json
@@ -15,11 +15,15 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.0",
     "@supabase/supabase-js": "^2.52.0",
+    "apexcharts": "^5.3.1",
     "chart.js": "^4.5.0",
     "daisyui": "^4.6.0",
+    "echarts": "^5.6.0",
     "vue": "^3.5.17",
     "vue-chartjs": "^5.3.2",
-    "vue-router": "^4.5.1"
+    "vue-echarts": "^7.0.3",
+    "vue-router": "^4.5.1",
+    "vue3-apexcharts": "^1.8.0"
   },
   "devDependencies": {
     "@types/node": "^24.0.15",
