--- a/Dashboards/package.json
+++ b/Dashboards/package.json
@@ -15,10 +15,18 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.0",
     "@supabase/supabase-js": "^2.52.0",
+    "@tailwindcss/vite": "^4.1.11",
+    "@vueuse/core": "^13.5.0",
     "apexcharts": "^5.3.1",
     "chart.js": "^4.5.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "daisyui": "^4.6.0",
     "echarts": "^5.6.0",
+    "lucide-vue-next": "^0.526.0",
+    "reka-ui": "^2.4.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "vue": "^3.5.17",
     "vue-chartjs": "^5.3.2",
     "vue-echarts": "^7.0.3",
@@ -26,7 +34,7 @@
     "vue3-apexcharts": "^1.8.0"
   },
   "devDependencies": {
-    "@types/node": "^24.0.15",
+    "@types/node": "^24.1.0",
     "@vitejs/plugin-vue": "^4.6.2",
     "@vue/eslint-config-typescript": "^14.6.0",
     "autoprefixer": "^10.4.21",
