--- a/Nutribot/.env.example
+++ b/Nutribot/.env.example
@@ -11,6 +11,9 @@ OPENAI_API_KEY=key_here
 OPENAI_MODEL=gpt-4.1-mini-2025-04-14
 REPLICATE_API_TOKEN=your_replicate_token
 
+# Webhook Configuration (for production)
+WEBHOOK_URL=https://your-ngrok-url.ngrok.io
+WEBHOOK_PORT=8000
+
 # File Paths (optional)
-LOGIN_FILE=loginIDs.json
 FFMPEG_PATH=/path/to/ffmpeg
