--- a/Dashboards/package.json
+++ b/Dashboards/package.json
@@ -19,11 +19,13 @@
     "@vueuse/core": "^13.5.0",
     "apexcharts": "^5.3.1",
     "chart.js": "^4.5.0",
+    "chartjs": "^0.3.24",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "daisyui": "^4.6.0",
     "echarts": "^5.6.0",
     "lucide-vue-next": "^0.526.0",
+    "papaparse": "^5.5.3",
     "reka-ui": "^2.4.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
