--- a/Dashboards/package.json
+++ b/Dashboards/package.json
@@ -26,6 +26,7 @@
     "echarts": "^5.6.0",
     "lucide-vue-next": "^0.526.0",
     "papaparse": "^5.5.3",
+    "pinia": "^3.0.3",
     "reka-ui": "^2.4.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
