--- a/Dashboards/package.json
+++ b/Dashboards/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/fontawesome-free": "^7.0.0",
     "@supabase/supabase-js": "^2.52.0",
     "@tailwindcss/vite": "^4.1.11",
+    "@vue/compat": "^3.5.18",
     "@vueuse/core": "^13.5.0",
     "apexcharts": "^5.3.1",
     "chart.js": "^4.5.0",
@@ -34,7 +35,8 @@
     "vue-chartjs": "^5.3.2",
     "vue-echarts": "^7.0.3",
     "vue-router": "^4.5.1",
-    "vue3-apexcharts": "^1.8.0"
+    "vue3-apexcharts": "^1.8.0",
+    "vue3-chart-v2": "^0.8.3"
   },
   "devDependencies": {
     "@types/node": "^24.1.0",
