--- a/railway.toml
+++ b/railway.toml
@@ -1,9 +1,13 @@
 [build]
-command = "cd Dashboards/backend && npm install"
+command = "npm install"
 
 [deploy]
-startCommand = "cd Dashboards/backend && node server.js"
+startCommand = "node server.js"
 healthcheckPath = "/api/health"
+
+[[services]]
+name = "backend"
+source = "Dashboards/backend"
 
 [environments.production.source]
 repo = "shyukii/DCSP-Team-2"
