--- a/Dashboards/.env.production
+++ b/Dashboards/.env.production
@@ -1,2 +1,2 @@
 # Production environment (will be set in Vercel)
-# VITE_API_URL=https://your-backend.railway.app/api
+VITE_API_URL=https://hotmexicanbabe69-production.up.railway.app/api
