Update railway.toml to trigger redeploy

--- a/Dashboards/backend/railway.toml
+++ b/Dashboards/backend/railway.toml
@@ -4,3 +4,7 @@ command = "npm install"
 [deploy]
 startCommand = "node server.js"
 healthcheckPath = "/api/health"
+
+# Force redeploy trigger
+[experimental]
+configVersion = 2
