--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "buildCommand": "cd Dashboards && npm run build",
   "outputDirectory": "Dashboards/dist",
-  "installCommand": "cd Dashboards && npm install"
+  "installCommand": "cd Dashboards && npm install --include=dev"
 }
