--- a/Dashboards/package.json
+++ b/Dashboards/package.json
@@ -36,11 +36,12 @@
     "vue-echarts": "^7.0.3",
     "vue-router": "^4.5.1",
     "vue3-apexcharts": "^1.8.0",
-    "vue3-chart-v2": "^0.8.3"
+    "vue3-chart-v2": "^0.8.3",
+    "@vitejs/plugin-vue": "^4.6.2",
+    "vite": "^5.4.19"
   },
   "devDependencies": {
     "@types/node": "^24.1.0",
-    "@vitejs/plugin-vue": "^4.6.2",
     "@vue/eslint-config-typescript": "^14.6.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.31.0",
@@ -49,7 +50,6 @@
     "prettier": "^3.6.2",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
-    "vite": "^5.4.19",
     "vue-tsc": "^1.8.11"
   }
 }
