--- a/Dashboards/package.json
+++ b/Dashboards/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "deploy": "npm run build && surge dist nutricycle-dashboard.surge.sh",
     "type-check": "vue-tsc --noEmit",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
