--- a/Dashboards/package.json
+++ b/Dashboards/package.json
@@ -17,11 +17,13 @@
     "@fortawesome/fontawesome-free": "^7.0.0",
     "@supabase/supabase-js": "^2.52.0",
     "@tailwindcss/vite": "^4.1.11",
+    "@vitejs/plugin-vue": "^4.6.2",
     "@vue/compat": "^3.5.18",
     "@vueuse/core": "^13.5.0",
     "apexcharts": "^5.3.1",
     "chart.js": "^4.5.0",
     "chartjs": "^0.3.24",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "daisyui": "^4.6.0",
@@ -32,14 +34,13 @@
     "reka-ui": "^2.4.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "vite": "^5.4.19",
     "vue": "^3.5.17",
     "vue-chartjs": "^5.3.2",
     "vue-echarts": "^7.0.3",
     "vue-router": "^4.5.1",
     "vue3-apexcharts": "^1.8.0",
-    "vue3-chart-v2": "^0.8.3",
-    "@vitejs/plugin-vue": "^4.6.2",
-    "vite": "^5.4.19"
+    "vue3-chart-v2": "^0.8.3"
   },
   "devDependencies": {
     "@types/node": "^24.1.0",
